Google Maps and Contact

--- a/index.html
+++ b/index.html
@@ -290,6 +290,23 @@
 				</div>
 			</section>
 
+			
+		<!-- Fourth -->
+			<section id="fourth" class="main">
+				<header>
+					<div class="container">
+						<h2>We Are located at</h2>
+						<p>29 Woodbridge Rd, Guildford GU1 1ED</p>
+						<p>Tel: 01483 458884</p>
+					</div>
+				</header>
+				<div class="content style4 featured">
+					<div class="container medium">
+						<img src="images/maps.png">
+					</div>
+				</div>
+			</section>
+
 		<!-- Footer -->
 			<section id="footer">
 	
